# cygnus-terminal

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  registry.rs
src-tauri/src/commands/: mod.rs  profile.rs  pty.rs  services.rs  ssh.rs  vault.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: command_bookmark.rs  export.rs  history.rs  known_host.rs  migration.rs  mod.rs  path_bookmark.rs  profile.rs  snippet.rs
src-tauri/src/forward/: mod.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/serial/: mod.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/tail/: mod.rs
src-tauri/src/telnet/: mod.rs
src-tauri/src/transfer/: mod.rs
src-tauri/src/vault/: store.rs
src-tauri/src/watcher/: mod.rs
src-tauri/tests/: crypto_test.rs  db_test.rs
src/components/: ConnectDialog.css  ConnectDialog.tsx  ConnectionsView.tsx  FileTree.css  FileTree.tsx  LogViewer.css  LogViewer.tsx  MonitorBar.css  MonitorBar.tsx  ResizablePanel.css  ResizablePanel.tsx  ServerContext.css  ServerContext.tsx  SettingsDialog.css  Sidebar.tsx  TabBar.css  TabBar.tsx  Terminal.tsx
src/components/common/: CommandPalette.css  CommandPalette.tsx  HostKeyPrompt.css  HostKeyPrompt.tsx  ResizablePanel.css  SerialConnectDialog.css  SerialConnectDialog.tsx  SettingsDialog.css  SettingsDialog.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  UpdateBanner.css  UpdateBanner.tsx
src/components/connection/: ConnectDialog.css  ConnectDialog.tsx  ConnectionsView.css  ConnectionsView.tsx  ServerContext.css  ServerContext.tsx  Sidebar.css  Sidebar.tsx
src/components/files/: FileTree.css  FileTree.tsx
src/components/sftp/: ConflictDialog.css  ConflictDialog.tsx  ContextMenu.css  ContextMenu.tsx  FilePanel.css  FilePanel.tsx  InputDialog.css  InputDialog.tsx  SftpView.css  SftpView.tsx  SyncDialog.css  SyncDialog.tsx  Toolbar.css  Toolbar.tsx  TransferDock.css  TransferDock.tsx  TransferPanel.css  TransferPanel.tsx
src/components/snippets/: SnippetsView.css  SnippetsView.tsx
src/components/terminal/: LogViewer.css  (+6 more)
src/hooks/: useAlertRules.ts  useConflictResolver.ts  useDragDrop.ts  useHighlightSettings.ts  useInvokeState.ts  useServerStats.ts  useTauriListener.ts  useTerminalNotifySettings.ts  useTheme.ts  useTransferChannel.ts  useVaultPromptRules.ts
src/services/: transferService.ts
src/themes/: presets.ts  types.ts
src/types/: index.ts  profile.ts  server-context.ts  sftp.ts  tab.ts
src/utils/: ansiHighlight.ts  format.ts  logLevel.ts  osc7.ts  path.test.ts  path.ts  promptParser.test.ts  promptParser.ts
src/views/: LogViewerPopoutApp.css  LogViewerPopoutApp.tsx  SftpConnectView.css  SftpConnectView.tsx  SftpPopoutApp.tsx
(+15 files in other folders)
