[package]
name = "cygnus-terminal"
version = "0.1.7"
description = "Diverse and powerful all-in-one terminal"
authors = ["cygnus970209"]
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cygnus_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
russh = "0.60.2"
russh-sftp = "2.1"
shellexpand = "3"
shell-words = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rand = "0.10"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
notify = "8"
notify-debouncer-mini = "0.7"
dirs = "6"
serialport = "4"
tauri-plugin-notification = "2.3.3"
